--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@material-tailwind/html": "^2.0.0",
+    "@mui/x-charts": "^6.0.0-alpha.12",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.16.0",
     "react-sweetalert2": "^0.6.0",
+    "recharts": "^2.8.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
